# low_index

./: .gitignore  MANIFEST.in  README.rst  covers.pyx  multi.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: .#build.yml  build.yml  linux.yml  macos.yml  windows.yml
cpp_low_index/: setup.py  test.py  test2.py  test3.py
cpp_low_index/cpp_src/: abstractSimsNode.cpp  abstractSimsNode.h  coveringSubgraph.cpp  coveringSubgraph.h  docAbstractSimsNode.h  docCoveringSubgraph.h  docLowIndex.h  docSimsNode.h  docSimsTreeBase.h  docSimsTreeMultiThreaded.h  docWords.h  heapedSimsNode.cpp  heapedSimsNode.h  lowIndex.cpp  lowIndex.h  relator.cpp  relator.h  simsNode.cpp  simsNode.h  simsNodeStack.cpp  simsNodeStack.h  simsTree.cpp  simsTree.h  simsTreeBase.cpp  simsTreeBase.h  simsTreeBasis.h  simsTreeMultiThreaded.cpp  simsTreeMultiThreaded.h  stackedSimsNode.cpp  stackedSimsNode.h  types.h  words.cpp  words.h  wrapAbstractSimsNode.cpp  wrapAll.cpp  wrapCoveringSubgraph.cpp  wrapHeapedSimsNode.cpp  wrapLowIndex.cpp  wrapModule.cpp  wrapSimsNode.cpp  (+4 more)
cpp_low_index/dev/: threading_stress_test.py
cpp_src/: abstractSimsNode.cpp  coveringSubgraph.cpp  coveringSubgraph.h  docAbstractSimsNode.h  docSimsTree.h  docWords.h  lowIndex.cpp  simsTreeMultiThreaded.cpp  simsTreeMultiThreaded.h  types.h  words.cpp  words.h  wrapSimsNode.cpp  wrapWords.cpp
cython_low_index/: setup.py
cython_src/: _fpgroups.pyx  _low_index.pyx  covers.pxi  covers.pyx  words.pyx
doc/: lowindex.tex
python_src/: __init__.py  benchmark.py  multi.py  test.py
sdist/: make.py  setup-sdist.py
(+6 files in other folders)
