[metadata]
name = low_index
version = attr: low_index.__version__
description = Enumerates low index subgroups of a finitely presented group
url = https://github.com/3-manifolds/low_index
author = Marc Culler, Nathan M. Dunfield and Matthias Goerner
author_email = culler@marc-culler.info, nathan@dunfield.info, enischte@gmail.com
license = GPLv2+
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent
    Programming Language :: Cython
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Mathematics

[options]
python_requires >= 3
packages = low_index
package_dir =
    low_index = python_src
zip_safe = False
